# ai_content_optimization_agent

./: .gitignore  README.md  pyproject.toml
llms/: gemini_google_search_llm.py
src/ai_content_optimization_agent/: crew.py  main.py
src/ai_content_optimization_agent/config/: agents.yaml  tasks.yaml
